--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Welcome – 사무엘의 수리 언어 블로그</title>
+<title>인사말 – 사무엘의 수리 언어 블로그</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -158,7 +158,7 @@ window.Quarto = {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Welcome</h1>
+<h1 class="title">인사말</h1>
 </div>
 
 
@@ -175,22 +175,18 @@ window.Quarto = {
 </header>
 
 
-<section id="안녕하세요" class="level1">
-<h1>안녕하세요! 👋</h1>
-<p>저는 다양한 언어와 수학을 좋아하는 <strong>사무엘</strong>(본명: 김상윤)입니다.<br>
-이 블로그는 외국어, 수학, 언어학, 프로그래밍 등<br>
-제가 공부한 내용을 정리하고 공유하는 공간입니다.</p>
+<p>저는 다양한 언어와 수학을 좋아하는 <strong>사무엘</strong>(본명: 김상윤(金尙潤))입니다.</p>
+<p>이 블로그는 외국어, 수학, 언어학, 프로그래밍 등 제가 공부한 내용을 정리하고 공유하는 공간입니다.</p>
 <hr>
 <section id="언어-선택" class="level2">
 <h2 class="anchored" data-anchor-id="언어-선택">🌐 언어 선택</h2>
 <ul>
-<li><a href="ko.html">🇰🇷 한국어 블로그로 가기</a></li>
-<li><a href="en.html">🇬🇧 Go to English Blog</a></li>
+<li><a href="ko.html">🇰🇷 한국어 블로그</a></li>
+<li><a href="en.html">🇬🇧 English Blog</a></li>
 </ul>
 
 
 
-</section>
 </section>
 
 </main> <!-- /main -->
