--- a/ko.html
+++ b/ko.html
@@ -185,7 +185,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">분류</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">전체 <span class="quarto-category-count">(3)</span></div><div class="category" data-category="YW5hbHlzaXM=">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Y2FsY3VsdXM=">calculus <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Y29kZQ==">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bWF0aA==">math <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmV3cw==">news <span class="quarto-category-count">(2)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">분류</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">전체 <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Y2FsY3VsdXM=">calculus <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bWF0aA==">math <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content column-page-left" id="quarto-document-content">
 
@@ -216,40 +216,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bmV3cw==" data-listing-date-sort="1742569200000" data-listing-file-modified-sort="1742986089472" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
-<div class="thumbnail">
-<p><a href="./posts/ko/welcome/index.html" class="no-external"></a></p><a href="./posts/ko/welcome/index.html" class="no-external">
-<p class="card-img-top"><img src="posts/ko/welcome/thumbnail.jpg"  class="thumbnail-image card-img"/></p>
-</a><p><a href="./posts/ko/welcome/index.html" class="no-external"></a></p>
-</div>
-<div class="body">
-<h3 class="no-anchor listing-title">
-<a href="./posts/ko/welcome/index.html" class="no-external">Welcome To My Blog</a>
-</h3>
-<div class="listing-subtitle">
-<a href="./posts/ko/welcome/index.html" class="no-external"></a>
-</div>
-<div class="listing-categories">
-<div class="listing-category" onclick="window.quartoListingCategory('bmV3cw=='); return false;">
-news
-</div>
-</div>
-<div class="listing-description">
-<a href="./posts/ko/welcome/index.html" class="no-external">제 블로그예요. Welcome!</a>
-</div>
-</div>
-<div class="metadata">
-<a href="./posts/ko/welcome/index.html" class="no-external">
-<div class="listing-date">
-2025. 3. 22.
-</div>
-<div class="listing-author">
-Tristan O’Malley
-</div>
-</a>
-</div>
-</div>
-<div class="quarto-post image-right" data-index="1" data-categories="bWF0aCUyQ2NhbGN1bHVz" data-listing-date-sort="1742914800000" data-listing-file-modified-sort="1742993288871" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="43">
+<div class="quarto-post image-right" data-index="0" data-categories="bWF0aCUyQ2NhbGN1bHVz" data-listing-date-sort="1742914800000" data-listing-file-modified-sort="1743064137662" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="43">
 <div class="thumbnail">
 <p><a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external"></a></p><a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -257,7 +224,7 @@ Tristan O’Malley
 </div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external">그린 정리</a>
+<a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external">그린 정리란 무엇일까</a>
 </h3>
 <div class="listing-subtitle">
 <a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external"></a>
@@ -279,45 +246,6 @@ calculus
 <a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external">
 <div class="listing-date">
 2025. 3. 26.
-</div>
-</a>
-</div>
-</div>
-<div class="quarto-post image-right" data-index="2" data-categories="bmV3cyUyQ2NvZGUlMkNhbmFseXNpcw==" data-listing-date-sort="1742828400000" data-listing-file-modified-sort="1742986114172" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="7">
-<div class="thumbnail">
-<p><a href="./posts/ko/post-with-code/index.html" class="no-external"></a></p><a href="./posts/ko/post-with-code/index.html" class="no-external">
-<p><img loading="lazy" src="./posts/ko/post-with-code/image.jpg" class="thumbnail-image"></p>
-</a><p><a href="./posts/ko/post-with-code/index.html" class="no-external"></a></p>
-</div>
-<div class="body">
-<h3 class="no-anchor listing-title">
-<a href="./posts/ko/post-with-code/index.html" class="no-external">코드와 포스트</a>
-</h3>
-<div class="listing-subtitle">
-<a href="./posts/ko/post-with-code/index.html" class="no-external"></a>
-</div>
-<div class="listing-categories">
-<div class="listing-category" onclick="window.quartoListingCategory('bmV3cw=='); return false;">
-news
-</div>
-<div class="listing-category" onclick="window.quartoListingCategory('Y29kZQ=='); return false;">
-code
-</div>
-<div class="listing-category" onclick="window.quartoListingCategory('YW5hbHlzaXM='); return false;">
-analysis
-</div>
-</div>
-<div class="listing-description">
-<a href="./posts/ko/post-with-code/index.html" class="no-external">This is a post with executable code.</a>
-</div>
-</div>
-<div class="metadata">
-<a href="./posts/ko/post-with-code/index.html" class="no-external">
-<div class="listing-date">
-2025. 3. 25.
-</div>
-<div class="listing-author">
-Harlow Malloc
 </div>
 </a>
 </div>
