--- a/ko.html
+++ b/ko.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>사무엘의 수리 언어 블로그</title>
+<title>한국어 블로그 – 사무엘의 수리 언어 블로그</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -191,7 +191,7 @@ window.Quarto = {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">사무엘의 수리 언어 블로그</h1>
+<h1 class="title">한국어 블로그</h1>
 </div>
 
 
@@ -208,7 +208,6 @@ window.Quarto = {
 </header>
 
 
-<p>사무엘의 수리 언어 블로그에 오신 걸 환영합니다!</p>
 
 
 
