"그린 정리란 무엇인가" 작성중

--- a/ko.html
+++ b/ko.html
@@ -215,7 +215,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bWF0aCUyQ2NhbGN1bHVz" data-listing-date-sort="1742914800000" data-listing-file-modified-sort="1743236718568" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="224">
+<div class="quarto-post image-right" data-index="0" data-categories="bWF0aCUyQ2NhbGN1bHVz" data-listing-date-sort="1742914800000" data-listing-file-modified-sort="1743237074510" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="224">
 <div class="thumbnail">
 <p><a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external"></a></p><a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -242,7 +242,7 @@ calculus
 <span class="speaker-c">C</span>: 그린 정리는 선적분을 면적분으로, 면적분을 선적분으로 바꿀 수 있는 강력한 도구야. 나중에 배울 스토크스 정리, 발산 정리와도 연결되지.<br>
 그린 정리를 식으로 나타내면 다음과 같아:<br>
 <span class="math display">\[
-\oint_C (P \, dx + Q \, dy)…</span><br><span class="boxed-math"><span class="math inline"></span></span><span class="boxed-math"><span class="math inline"></span></span><br><span class="speaker-a"></span><br><span class="speaker-c"></span><br><span class="speaker-a"></span><br><span class="math display"></span><br><span class="math inline"></span><span class="math inline"></span><br><span class="boxed-math"><span class="math inline"></span></span></a>
+\oint_C (P \, dx + Q \, dy)…</span><br><span class="boxed-math"><span class="math inline"></span></span><span class="boxed-math"><span class="math inline"></span></span><br><span class="speaker-a"></span><br><span class="speaker-c"></span><br><span class="speaker-a"></span><br><span class="math display"></span><br><span class="math inline"></span><span class="math inline"></span><br><span class="boxed-math"><span class="math inline"></span></span><br><span class="speaker-c"></span><span class="boxed-math"><span class="math inline"></span></span></a>
 </div>
 </div>
 <div class="metadata">
