Crossy Road와 확률 작성

--- a/ko.html
+++ b/ko.html
@@ -40,7 +40,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-2f5df379a58b258e96c21c0638c20c03.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-ddd961a2510921635943dfbbd19534c4.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-6bd9cfa162949bde0a231f530c97869d.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -185,7 +185,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">분류</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">전체 <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Y2FsY3VsdXM=">calculus <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bWF0aA==">math <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">분류</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">전체 <span class="quarto-category-count">(2)</span></div><div class="category" data-category="Y2FsY3VsdXM=">calculus <span class="quarto-category-count">(2)</span></div><div class="category" data-category="bWF0aA==">math <span class="quarto-category-count">(2)</span></div></div></div>
 <!-- main -->
 <main class="content column-page-left" id="quarto-document-content">
 
@@ -215,7 +215,43 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bWF0aCUyQ2NhbGN1bHVz" data-listing-date-sort="1742914800000" data-listing-file-modified-sort="1743262537206" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="227">
+<div class="quarto-post image-right" data-index="0" data-categories="bWF0aCUyQ2NhbGN1bHVz" data-listing-date-sort="1743260400000" data-listing-file-modified-sort="1743310478151" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="103">
+<div class="thumbnail">
+<p><a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external"></a></p><a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external">
+<p><img loading="lazy" src="./posts/ko/2025-03-30-crossy-road-and-probability/img_1522.png" class="thumbnail-image"></p>
+</a><p><a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external">Crossy Road와 확률</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external"></a>
+</div>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('bWF0aA=='); return false;">
+math
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('Y2FsY3VsdXM='); return false;">
+calculus
+</div>
+</div>
+<div class="listing-description">
+<a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external">Crossy Road(길건너 친구들)를 플레이하면서 이런 생각이 들었다.<br>
+내가 한 스텝 건널 때마다 죽을 확률이 있지 않을까?<br>
+물론 내가 한 스텝 건널 때마다 죽을 확률이 도로 위, 강 위, 철도 위인지에 따라 다르겠지만,<br>
+평균적으로 한 스텝 건널 때마다 죽을 확률을 생각할 수 있지 않을까?</a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external">
+<div class="listing-date">
+2025. 3. 30.
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="bWF0aCUyQ2NhbGN1bHVz" data-listing-date-sort="1742914800000" data-listing-file-modified-sort="1743306432669" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="228">
 <div class="thumbnail">
 <p><a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external"></a></p><a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -237,12 +273,7 @@ calculus
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external"><span class="speaker-c">C</span>: 오늘은 그린 정리에 대해서 배워 보자.<br>
-<span class="speaker-a">A</span>: 그린 정리가 뭐야?<br>
-<span class="speaker-c">C</span>: 그린 정리는 선적분을 면적분으로, 면적분을 선적분으로 바꿀 수 있는 강력한 도구야. 나중에 배울 스토크스 정리, 발산 정리와도 연결되지.<br>
-그린 정리를 식으로 나타내면 다음과 같아:<br>
-<span class="math display">\[
-\oint_C (P \, dx + Q \, dy)…</span><br><span class="boxed-math"><span class="math inline"></span></span><span class="boxed-math"><span class="math inline"></span></span><br><span class="speaker-a"></span><br><span class="speaker-c"></span><br><span class="speaker-a"></span><br><span class="math display"></span><br><span class="math inline"></span><span class="math inline"></span><br><span class="boxed-math"><span class="math inline"></span></span><br><span class="speaker-c"></span><span class="boxed-math"><span class="math inline"></span></span></a>
+<a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external">그린 정리는</a>
 </div>
 </div>
 <div class="metadata">
