카테고리 수정

--- a/en.html
+++ b/en.html
@@ -40,7 +40,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-2f5df379a58b258e96c21c0638c20c03.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-ddd961a2510921635943dfbbd19534c4.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-6bd9cfa162949bde0a231f530c97869d.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -216,7 +216,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bWF0aCUyQ2NhbGN1bHVz" data-listing-date-sort="1742914800000" data-listing-file-modified-sort="1742989132000" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="54">
+<div class="quarto-post image-right" data-index="0" data-categories="bWF0aCUyQ2NhbGN1bHVz" data-listing-date-sort="1742914800000" data-listing-file-modified-sort="1742989132431" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="54">
 <div class="thumbnail">
 <p><a href="./posts/en/2025-03-26-green-theorem/index.html" class="no-external"></a></p><a href="./posts/en/2025-03-26-green-theorem/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -249,7 +249,7 @@ Mar 26, 2025
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="bmV3cyUyQ2NvZGUlMkNhbmFseXNpcw==" data-listing-date-sort="1742828400000" data-listing-file-modified-sort="1742910676000" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="7">
+<div class="quarto-post image-right" data-index="1" data-categories="bmV3cyUyQ2NvZGUlMkNhbmFseXNpcw==" data-listing-date-sort="1742828400000" data-listing-file-modified-sort="1742910676597" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="7">
 <div class="thumbnail">
 <p><a href="./posts/en/post-with-code/index.html" class="no-external"></a></p><a href="./posts/en/post-with-code/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/en/post-with-code/image.jpg" class="thumbnail-image"></p>
@@ -288,10 +288,10 @@ Harlow Malloc
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="bmV3cw==" data-listing-date-sort="1742569200000" data-listing-file-modified-sort="1742910676000" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="32">
+<div class="quarto-post image-right" data-index="2" data-categories="bmV3cw==" data-listing-date-sort="1742569200000" data-listing-file-modified-sort="1742910676596" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="32">
 <div class="thumbnail">
 <p><a href="./posts/en/welcome/index.html" class="no-external"></a></p><a href="./posts/en/welcome/index.html" class="no-external">
-<p class="card-img-top"><img src="posts\en\welcome\thumbnail.jpg"  class="thumbnail-image card-img"/></p>
+<p class="card-img-top"><img src="posts/en/welcome/thumbnail.jpg"  class="thumbnail-image card-img"/></p>
 </a><p><a href="./posts/en/welcome/index.html" class="no-external"></a></p>
 </div>
 <div class="body">
