--- a/ko.html
+++ b/ko.html
@@ -185,7 +185,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">분류</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">전체 <span class="quarto-category-count">(2)</span></div><div class="category" data-category="Y2FsY3VsdXM=">calculus <span class="quarto-category-count">(2)</span></div><div class="category" data-category="bWF0aA==">math <span class="quarto-category-count">(2)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">분류</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">전체 <span class="quarto-category-count">(2)</span></div><div class="category" data-category="Y2FsY3VsdXM=">calculus <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bGlmZQ==">life <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bWF0aGVtYXRpY3M=">mathematics <span class="quarto-category-count">(2)</span></div><div class="category" data-category="cHJvYmFiaWxpdHk=">probability <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content column-page-left" id="quarto-document-content">
 
@@ -215,7 +215,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bWF0aCUyQ2NhbGN1bHVz" data-listing-date-sort="1743260400000" data-listing-file-modified-sort="1743310478151" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="103">
+<div class="quarto-post image-right" data-index="0" data-categories="bGlmZSUyQ21hdGhlbWF0aWNzJTJDcHJvYmFiaWxpdHk=" data-listing-date-sort="1743260400000" data-listing-file-modified-sort="1743311611337" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="103">
 <div class="thumbnail">
 <p><a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external"></a></p><a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/ko/2025-03-30-crossy-road-and-probability/img_1522.png" class="thumbnail-image"></p>
@@ -229,18 +229,19 @@ window.Quarto = {
 <a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external"></a>
 </div>
 <div class="listing-categories">
-<div class="listing-category" onclick="window.quartoListingCategory('bWF0aA=='); return false;">
-math
+<div class="listing-category" onclick="window.quartoListingCategory('bGlmZQ=='); return false;">
+life
 </div>
-<div class="listing-category" onclick="window.quartoListingCategory('Y2FsY3VsdXM='); return false;">
-calculus
+<div class="listing-category" onclick="window.quartoListingCategory('bWF0aGVtYXRpY3M='); return false;">
+mathematics
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('cHJvYmFiaWxpdHk='); return false;">
+probability
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external">Crossy Road(길건너 친구들)를 플레이하면서 이런 생각이 들었다.<br>
-내가 한 스텝 건널 때마다 죽을 확률이 있지 않을까?<br>
-물론 내가 한 스텝 건널 때마다 죽을 확률이 도로 위, 강 위, 철도 위인지에 따라 다르겠지만,<br>
-평균적으로 한 스텝 건널 때마다 죽을 확률을 생각할 수 있지 않을까?</a>
+<a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external">Crossy Road(길건너 친구들)를 플레이하면서 이런 생각이 들었다. 내가 한 스텝 건널 때마다 죽을 확률이 있지 않을까? 물론 내가 한 스텝 건널 때마다 죽을 확률이 도로 위, 강 위, 철도 위인지에 따라 다르겠지만, 평균적으로 한 스텝 건널 때마다 죽을 확률을 생각할 수 있지 않을까?<br>
+나는 평균…</a>
 </div>
 </div>
 <div class="metadata">
@@ -251,7 +252,7 @@ calculus
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="bWF0aCUyQ2NhbGN1bHVz" data-listing-date-sort="1742914800000" data-listing-file-modified-sort="1743306432669" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="228">
+<div class="quarto-post image-right" data-index="1" data-categories="bWF0aGVtYXRpY3MlMkNjYWxjdWx1cw==" data-listing-date-sort="1742914800000" data-listing-file-modified-sort="1743311591864" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="228">
 <div class="thumbnail">
 <p><a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external"></a></p><a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -265,8 +266,8 @@ calculus
 <a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external"></a>
 </div>
 <div class="listing-categories">
-<div class="listing-category" onclick="window.quartoListingCategory('bWF0aA=='); return false;">
-math
+<div class="listing-category" onclick="window.quartoListingCategory('bWF0aGVtYXRpY3M='); return false;">
+mathematics
 </div>
 <div class="listing-category" onclick="window.quartoListingCategory('Y2FsY3VsdXM='); return false;">
 calculus
