--- a/ko.html
+++ b/ko.html
@@ -30,6 +30,7 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/quarto-search/fuse.min.js"></script>
 <script src="site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="./">
+<link href="./images/favicon.ico" rel="icon">
 <script src="site_libs/quarto-listing/list.min.js"></script>
 <script src="site_libs/quarto-listing/quarto-listing.js"></script>
 <script src="site_libs/quarto-html/quarto.js"></script>
@@ -215,7 +216,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bGlmZSUyQ21hdGhlbWF0aWNzJTJDcHJvYmFiaWxpdHk=" data-listing-date-sort="1743260400000" data-listing-file-modified-sort="1743311611337" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="103">
+<div class="quarto-post image-right" data-index="0" data-categories="bGlmZSUyQ21hdGhlbWF0aWNzJTJDcHJvYmFiaWxpdHk=" data-listing-date-sort="1743260400000" data-listing-file-modified-sort="1743311864482" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="103">
 <div class="thumbnail">
 <p><a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external"></a></p><a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/ko/2025-03-30-crossy-road-and-probability/img_1522.png" class="thumbnail-image"></p>
@@ -240,8 +241,10 @@ probability
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external">Crossy Road(길건너 친구들)를 플레이하면서 이런 생각이 들었다. 내가 한 스텝 건널 때마다 죽을 확률이 있지 않을까? 물론 내가 한 스텝 건널 때마다 죽을 확률이 도로 위, 강 위, 철도 위인지에 따라 다르겠지만, 평균적으로 한 스텝 건널 때마다 죽을 확률을 생각할 수 있지 않을까?<br>
-나는 평균…</a>
+<a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external">Crossy Road(길건너 친구들)를 플레이하면서 이런 생각이 들었다.<br>
+내가 한 스텝 건널 때마다 죽을 확률이 있지 않을까?<br>
+물론 내가 한 스텝 건널 때마다 죽을 확률이 도로 위, 강 위, 철도 위인지에 따라 다르겠지만,<br>
+평균적으로 한 스텝 건널 때마다 죽을 확률을 생각할 수 있지 않을까?</a>
 </div>
 </div>
 <div class="metadata">
