"나의 발견" 작성

--- a/ko.html
+++ b/ko.html
@@ -41,7 +41,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-2f5df379a58b258e96c21c0638c20c03.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-6bd9cfa162949bde0a231f530c97869d.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-ddd961a2510921635943dfbbd19534c4.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -186,7 +186,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">분류</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">전체 <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Y2FsY3VsdXM=">calculus <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bGFuZ3VhZ2U=">language <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bGlmZQ==">life <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bWF0aGVtYXRpY3M=">mathematics <span class="quarto-category-count">(2)</span></div><div class="category" data-category="cHJvYmFiaWxpdHk=">probability <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">분류</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">전체 <span class="quarto-category-count">(4)</span></div><div class="category" data-category="Y2FsY3VsdXM=">calculus <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bGFuZ3VhZ2U=">language <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bGlmZQ==">life <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bWF0aGVtYXRpY3M=">mathematics <span class="quarto-category-count">(2)</span></div><div class="category" data-category="cHJvYmFiaWxpdHk=">probability <span class="quarto-category-count">(2)</span></div></div></div>
 <!-- main -->
 <main class="content column-page-left" id="quarto-document-content">
 
@@ -216,7 +216,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bGlmZSUyQ21hdGhlbWF0aWNzJTJDcHJvYmFiaWxpdHk=" data-listing-date-sort="1743260400000" data-listing-file-modified-sort="1743311864482" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="103">
+<div class="quarto-post image-right" data-index="0" data-categories="bGlmZSUyQ21hdGhlbWF0aWNzJTJDcHJvYmFiaWxpdHk=" data-listing-date-sort="1743260400000" data-listing-file-modified-sort="1743311864000" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="103">
 <div class="thumbnail">
 <p><a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external"></a></p><a href="./posts/ko/2025-03-30-crossy-road-and-probability/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/ko/2025-03-30-crossy-road-and-probability/img_1522.png" class="thumbnail-image"></p>
@@ -255,7 +255,7 @@ probability
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="bWF0aGVtYXRpY3MlMkNjYWxjdWx1cw==" data-listing-date-sort="1742914800000" data-listing-file-modified-sort="1743311591864" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="228">
+<div class="quarto-post image-right" data-index="1" data-categories="bWF0aGVtYXRpY3MlMkNjYWxjdWx1cw==" data-listing-date-sort="1742914800000" data-listing-file-modified-sort="1743311591000" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="228">
 <div class="thumbnail">
 <p><a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external"></a></p><a href="./posts/ko/2025-03-26-green-theorem/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -288,7 +288,40 @@ calculus
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="bGFuZ3VhZ2U=" data-listing-date-sort="1743260400000" data-listing-file-modified-sort="1743330033606" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="111">
+<div class="quarto-post image-right" data-index="2" data-categories="cHJvYmFiaWxpdHk=" data-listing-date-sort="1743951600000" data-listing-file-modified-sort="1744033933670" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="45">
+<div class="thumbnail">
+<p><a href="./posts/ko/2025-04-07-my-discovery/index.html" class="no-external"></a></p><a href="./posts/ko/2025-04-07-my-discovery/index.html" class="no-external">
+<div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
+</a><p><a href="./posts/ko/2025-04-07-my-discovery/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/ko/2025-04-07-my-discovery/index.html" class="no-external">나의 발견</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/ko/2025-04-07-my-discovery/index.html" class="no-external"></a>
+</div>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('cHJvYmFiaWxpdHk='); return false;">
+probability
+</div>
+</div>
+<div class="listing-description">
+<a href="./posts/ko/2025-04-07-my-discovery/index.html" class="no-external">GPT랑 대화를 하면서 확률과 미적분의 관계에 대해서 깨닫게 됐다.<br>
+아직 공분산을 배우기 전인데 GPT한테서 공분산이 무엇인지 듣고 나니까 벡터의 코사인 유사도 생각이 났다.<br>
+이 얘기를 GPT한테 하니까 나보고 천재란다 ㅋㅋㅋ<br>
+이렇게 수학 분야들은 다 달라 보여도 다 연결돼 있는 것 같아서 신기하다.</a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/ko/2025-04-07-my-discovery/index.html" class="no-external">
+<div class="listing-date">
+2025. 4. 7.
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="3" data-categories="bGFuZ3VhZ2U=" data-listing-date-sort="1743260400000" data-listing-file-modified-sort="1743330033000" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="111">
 <div class="thumbnail">
 <p><a href="./posts/ko/2025-03-30-natural-language-and-computer-language/index.html" class="no-external"></a></p><a href="./posts/ko/2025-03-30-natural-language-and-computer-language/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
