--- a/ko.html
+++ b/ko.html
@@ -186,7 +186,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">분류</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">전체 <span class="quarto-category-count">(6)</span></div><div class="category" data-category="Y2FsY3VsdXM=">calculus <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bGFuZ3VhZ2U=">language <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bGlmZQ==">life <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bWF0aGVtYXRpY3M=">mathematics <span class="quarto-category-count">(2)</span></div><div class="category" data-category="cHJvYmFiaWxpdHk=">probability <span class="quarto-category-count">(4)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">분류</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">전체 <span class="quarto-category-count">(7)</span></div><div class="category" data-category="Y2FsY3VsdXM=">calculus <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bGFuZ3VhZ2U=">language <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bGlmZQ==">life <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bWF0aGVtYXRpY3M=">mathematics <span class="quarto-category-count">(6)</span></div><div class="category" data-category="cGVyc29uYWw=">personal <span class="quarto-category-count">(1)</span></div><div class="category" data-category="cHJvYmFiaWxpdHk=">probability <span class="quarto-category-count">(4)</span></div></div></div>
 <!-- main -->
 <main class="content column-page-left" id="quarto-document-content">
 
@@ -216,7 +216,41 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="cHJvYmFiaWxpdHk=" data-listing-date-sort="1747148400000" data-listing-file-modified-sort="1747226578958" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="440">
+<div class="quarto-post image-right" data-index="0" data-categories="bWF0aGVtYXRpY3MlMkNwcm9iYWJpbGl0eQ==" data-listing-date-sort="1747234800000" data-listing-file-modified-sort="1747309532870" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="488">
+<div class="thumbnail">
+<p><a href="./posts/ko/250515_무작위_보행에서의_거리_제곱의_기댓값/index.html" class="no-external"></a></p><a href="./posts/ko/250515_무작위_보행에서의_거리_제곱의_기댓값/index.html" class="no-external">
+<div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
+</a><p><a href="./posts/ko/250515_무작위_보행에서의_거리_제곱의_기댓값/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/ko/250515_무작위_보행에서의_거리_제곱의_기댓값/index.html" class="no-external">무작위 보행에서의 거리 제곱의 기댓값</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/ko/250515_무작위_보행에서의_거리_제곱의_기댓값/index.html" class="no-external"></a>
+</div>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('bWF0aGVtYXRpY3M='); return false;">
+mathematics
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('cHJvYmFiaWxpdHk='); return false;">
+probability
+</div>
+</div>
+<div class="listing-description">
+<a href="./posts/ko/250515_무작위_보행에서의_거리_제곱의_기댓값/index.html" class="no-external"><em>A First Course in Probability</em>, 9th edition by Sheldon Ross<br>
+Chapter 7, Example 2l, p.288</a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/ko/250515_무작위_보행에서의_거리_제곱의_기댓값/index.html" class="no-external">
+<div class="listing-date">
+2025. 5. 15.
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="bWF0aGVtYXRpY3MlMkNwcm9iYWJpbGl0eQ==" data-listing-date-sort="1747148400000" data-listing-file-modified-sort="1747305875218" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="440">
 <div class="thumbnail">
 <p><a href="./posts/ko/250514_모자_문제-포함-배제의_원리-/index.html" class="no-external"></a></p><a href="./posts/ko/250514_모자_문제-포함-배제의_원리-/index.html" class="no-external">
 <p class="card-img-top"><img src="posts/ko/250514_모자_문제-포함-배제의_원리-/Venn_diagram_ABC_BW_Explanation.png"  class="thumbnail-image card-img"/></p>
@@ -230,6 +264,9 @@ window.Quarto = {
 <a href="./posts/ko/250514_모자_문제-포함-배제의_원리-/index.html" class="no-external"></a>
 </div>
 <div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('bWF0aGVtYXRpY3M='); return false;">
+mathematics
+</div>
 <div class="listing-category" onclick="window.quartoListingCategory('cHJvYmFiaWxpdHk='); return false;">
 probability
 </div>
@@ -247,7 +284,7 @@ Chapter 2, Example 5m, p.39</a>
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="cHJvYmFiaWxpdHk=" data-listing-date-sort="1747062000000" data-listing-file-modified-sort="1747221038831" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="292">
+<div class="quarto-post image-right" data-index="2" data-categories="bWF0aGVtYXRpY3MlMkNwcm9iYWJpbGl0eQ==" data-listing-date-sort="1747062000000" data-listing-file-modified-sort="1747305880857" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="292">
 <div class="thumbnail">
 <p><a href="./posts/ko/250513_순서_통계량_문제를_다중_적분으로_접근해_보았다/index.html" class="no-external"></a></p><a href="./posts/ko/250513_순서_통계량_문제를_다중_적분으로_접근해_보았다/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -261,6 +298,9 @@ Chapter 2, Example 5m, p.39</a>
 <a href="./posts/ko/250513_순서_통계량_문제를_다중_적분으로_접근해_보았다/index.html" class="no-external"></a>
 </div>
 <div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('bWF0aGVtYXRpY3M='); return false;">
+mathematics
+</div>
 <div class="listing-category" onclick="window.quartoListingCategory('cHJvYmFiaWxpdHk='); return false;">
 probability
 </div>
@@ -278,7 +318,7 @@ Chapter 6, Problem 6.47, p.274</a>
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="cHJvYmFiaWxpdHk=" data-listing-date-sort="1743951600000" data-listing-file-modified-sort="1747221038831" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="45">
+<div class="quarto-post image-right" data-index="3" data-categories="cGVyc29uYWwlMkNtYXRoZW1hdGljcw==" data-listing-date-sort="1743951600000" data-listing-file-modified-sort="1747305890351" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="45">
 <div class="thumbnail">
 <p><a href="./posts/ko/250407_나의_발견/index.html" class="no-external"></a></p><a href="./posts/ko/250407_나의_발견/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -292,8 +332,11 @@ Chapter 6, Problem 6.47, p.274</a>
 <a href="./posts/ko/250407_나의_발견/index.html" class="no-external"></a>
 </div>
 <div class="listing-categories">
-<div class="listing-category" onclick="window.quartoListingCategory('cHJvYmFiaWxpdHk='); return false;">
-probability
+<div class="listing-category" onclick="window.quartoListingCategory('cGVyc29uYWw='); return false;">
+personal
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('bWF0aGVtYXRpY3M='); return false;">
+mathematics
 </div>
 </div>
 <div class="listing-description">
@@ -311,7 +354,7 @@ probability
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="3" data-categories="bGlmZSUyQ21hdGhlbWF0aWNzJTJDcHJvYmFiaWxpdHk=" data-listing-date-sort="1743260400000" data-listing-file-modified-sort="1747221038835" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="103">
+<div class="quarto-post image-right" data-index="4" data-categories="bGlmZSUyQ21hdGhlbWF0aWNzJTJDcHJvYmFiaWxpdHk=" data-listing-date-sort="1743260400000" data-listing-file-modified-sort="1747221038835" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="103">
 <div class="thumbnail">
 <p><a href="./posts/ko/250330_Crossy_Road와_확률/index.html" class="no-external"></a></p><a href="./posts/ko/250330_Crossy_Road와_확률/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/ko/250330_Crossy_Road와_확률/img_1522.png" class="thumbnail-image"></p>
@@ -350,7 +393,7 @@ probability
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="4" data-categories="bGFuZ3VhZ2U=" data-listing-date-sort="1743260400000" data-listing-file-modified-sort="1747221038835" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="111">
+<div class="quarto-post image-right" data-index="5" data-categories="bGFuZ3VhZ2U=" data-listing-date-sort="1743260400000" data-listing-file-modified-sort="1747221038835" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="111">
 <div class="thumbnail">
 <p><a href="./posts/ko/250330_자연어와_컴퓨터_언어/index.html" class="no-external"></a></p><a href="./posts/ko/250330_자연어와_컴퓨터_언어/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
@@ -385,7 +428,7 @@ language
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="5" data-categories="bWF0aGVtYXRpY3MlMkNjYWxjdWx1cw==" data-listing-date-sort="1742914800000" data-listing-file-modified-sort="1747221038831" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="227">
+<div class="quarto-post image-right" data-index="6" data-categories="bWF0aGVtYXRpY3MlMkNjYWxjdWx1cw==" data-listing-date-sort="1742914800000" data-listing-file-modified-sort="1747221038831" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="227">
 <div class="thumbnail">
 <p><a href="./posts/ko/250326_그린_정리란_무엇일까/index.html" class="no-external"></a></p><a href="./posts/ko/250326_그린_정리란_무엇일까/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
